# kaspersmicrobit

./: .gitignore  README-nl.md  README.md  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: lint_and_test.yml  python-publish.yml
docs/: accelerometer.md  buttons.md  conf.py  events_v1.md  events_v2.md  generate_apiref_nav.py  how-to-connect.md  index.md  index.rst  io_pin.md  led.md  magnetometer.md  readme.rst  requirements.txt  run-first-program.md  temperature.md  test-all-services.md  uart.md
docs/bluetooth-pairing/linux/: pairing-microbit-linux-gnome.md
docs/bluetooth-pairing/windows/: pairing-microbit-windows.md
docs/config/en/: .readthedocs.yaml  mkdocs.yml
docs/config/nl/: .readthedocs.yaml  mkdocs.yml
docs/hex/: microbit-v1-bluetooth-magnetometer-uart.hex  microbit-v2-bluetooth-all-services-active.hex
docs/makecode-bluetooth/: create-a-makecode-project-with-pairing.md  create-a-makecode-project-without-pairing.md  download-a-hex-file-with-pairing.md  download-a-hex-file-without-pairing.md  enable-bluetooth.md
docs/overrides/: main.html  sitemap.xml
docs/pygame/: use_accelerometer_to_move_ball.md  use_buttons_to_move_rectangle.md
docs/scripts/: copy_hex_files.py  docstring_translation_plugin.py  docstrings_nl.txt  generate_apiref_nav.py
docs/source/: kaspersmicrobit.rst  kaspersmicrobit.services.rst  modules.rst
docs/tkinter/: use_accelerometer_to_move_ball.md  use_buttons_to_move_rectangle.md
examples/: bleak-device-info.py  find-microbits.py  microbit-accelerometer.py  microbit-bluetooth.py  microbit-buttons.py  microbit-device-information.py  microbit-events-v1.py  microbit-events-v2.py  microbit-generic-access.py  microbit-io_pin.py  microbit-led.py  microbit-magnetometer.py  microbit-temperature.py  microbit-test-any-service.py  microbit-uart.py  tk-mainloop-accelerometer.py  tk-mainloop.py
examples/bleak/: bleak-scan.py
examples/pygame/: pygame-use-accelerometer-to-move-ball.py  pygame-use-buttons-to-move-rectangle.py
examples/tkinter/: tk-mainloop-accelerometer.py  tk-mainloop-accelerometer2.py  tk-use-accelerometer-to-move-ball-and-bounce.py  tk-use-accelerometer-to-move-ball.py  tk-use-buttons-to-move-rectangle.py
hex/: microbit-bluetooth-all-services-active.hex  microbit-v1-bluetooth-without-magnetometer-or-uart.hex
src/kaspersmicrobit/: __init__.py  bluetoothdevice.py  characteristics.py  errors.py  kaspersmicrobit.py  services.py  tkinter.py
tests/: test_bluetoothdevice.py  test_do_in_tkinter.py  test_event.py  test_io_pin.py  test_leddisplay.py
(+80 files in other folders)
