[metadata]
name = kaspersmicrobit
version = 0.3.2
author = Janick Reynders
description = A python package to connect to the Bluetooth LE GATT services of paired BBC micro:bit devices. Use your micro:bit as a wireless game controller!
license = Mozilla Public License 2.0 (MPL 2.0)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/janickr/kaspersmicrobit
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    bleak

[options.packages.find]
where = src

