[metadata]
name = kaspersmicrobit
version = 0.4.0
author = Janick Reynders
description = A python package to connect to the Bluetooth LE GATT services of paired BBC micro:bit devices. Use your micro:bit as a wireless game controller!
license = Mozilla Public License 2.0 (MPL 2.0)
license_files = LICENSE.md
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/janickr/kaspersmicrobit
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    microbit
    bluetooth
    ble
    python-for-kids
    gatt
project_urls =
    Documentation = https://kaspersmicrobit.readthedocs.io/en/stable

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    bleak>=0.20.0

[options.packages.find]
where = src

